Simplifcation refactoring